-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.2
-
None
-
a3a43abc048d9ca1a50368c1dbb77cc8cf7a61b1
Package: qt-everywhere-opensource-src-5.0.2
Configure command:
./configure -debug-and-release -platform macx-g++42 -opensource -openssl-linked -no-icu -no-xcb -no-eglfs -no-directfb -no-linuxfb -no-kms -opengl -confirm-license
Build error:
============
g+-4.2 -c -include .pch/debug-shared/QtNetwork_debug -pipe -mmacosx-version-min=10.6 -g -gdwarf-2 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -fPIC -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DQT_NO_XCB -DQT_NO_USING_NAMESPACE -DQT_BUILD_NETWORK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -I../../mkspecs/macx-g+42 -I. -I../../include -I../../include/QtNetwork -I../../include/QtNetwork/5.0.2 -I../../include/QtNetwork/5.0.2/QtNetwork -Ikernel -I../../include/QtCore -I../../include/QtCore/5.0.2 -I../../include/QtCore/5.0.2/QtCore -I.moc/debug-shared -F/qt-everywhere-opensource-src-5.0.2/qtbase/lib -o .obj/debug-shared/qsslsocket_openssl_symbols.o ssl/qsslsocket_openssl_symbols.cpp
ssl/qsslsocket_openssl_symbols.cpp: In function 'void q_sk_push(STACK*, void*)':
ssl/qsslsocket_openssl_symbols.cpp:186: error: invalid conversion from 'void*' to 'char*'
ssl/qsslsocket_openssl_symbols.cpp:186: error: initializing argument 2 of 'int sk_push(STACK*, char*)'
ssl/qsslsocket_openssl_symbols.cpp: In function 'int q_ASN1_STRING_print(BIO*, const ASN1_STRING*)':
ssl/qsslsocket_openssl_symbols.cpp:296: error: invalid conversion from 'const ASN1_STRING*' to 'ASN1_STRING*'
ssl/qsslsocket_openssl_symbols.cpp:296: error: initializing argument 2 of 'int ASN1_STRING_print(BIO*, ASN1_STRING*)'
make[4]: *** [.obj/debug-shared/qsslsocket_openssl_symbols.o] Error 1
make[3]: *** [debug-all] Error 2
make[2]: *** [sub-network-make_first] Error 2
make[1]: *** [sub-src-make_first] Error 2
make: *** [module-qtbase-make_first] Error 2
- is required for
-
QTBUG-31105 Qt 5.1 RC1 release tasks
-
- Closed
-